--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,7 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"imayou123_dotnet-monorepo2_eShop" /d:sonar.projectBaseDir="TopLevel/Project2/eShopOnWeb" /d:sonar.token="${{ secrets.SONAR_TOKEN_2 }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
-          dotnet build
+          dotnet build TopLevel/Project2/eShopOnWeb/eShopOnWeb.sln
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN_2 }}"
         # add project key in previous command
   # Add other scan jobs if you wish to scan more projects in the monorepo   
